# fix8

./: .gitignore  .gitmodules  AUTHORS  CNAME  CONTRIBUTORS  COPYING  ChangeLog  Doxyfile  INSTALL  JenkinsFile  LICENSE  Makefile  Makefile.am  NEWS  README  README.md  aboutus.html  bootstrap  build.bat  build.bat_  changenotes.txt  configure  configure.ac  contact.html  downloads.html  faq.html  fix8.spec.in  fix8mt.html  howitworks.html  index.html  issues.html  mail.php  partners.html  performance.html  qcustomplot.cpp  qcustomplot.h  support.html  urllist.txt  version.sh
compiler/: FIX40SFE.xml  FIX44.xml  Makefile  Makefile.am  f8c.cpp  f8c.hpp  f8cstatic.hpp  f8cutils.cpp  f8precomp.cpp  myfix.cpp  myfix.hpp  precomp.hpp
contrib/: FindFix8.cmake
contrib/exchangeSchemas/: TSX_EXCHANGE_FIX43.xml  readme.txt
css/: bootstrap.css  fam-icons.css
doc/: Makefile.am  fix8.doxygen  fix8.doxygen.in  fix8.footer.html  fix8.header.html  index.html  mainpage.doxygen
doc/man/: f8c.1.xml.in  f8c.8.xml.in  seqedit.1.xml.in  seqedit.8.xml.in  xmltoman
fix8/html/: FIX50SP2_8xml.html  FIX50SP2_8xml_source.html  MPMCqueues_8hpp.html  MPMCqueues_8hpp.js  MPMCqueues_8hpp_source.html  Myfix__classes_8cpp.html  Myfix__classes_8cpp.js  Myfix__classes_8cpp_source.html  Myfix__classes_8hpp.html  Myfix__classes_8hpp.js  Myfix__router_8hpp.html  Myfix__router_8hpp.js  Myfix__router_8hpp_source.html  Myfix__traits_8cpp.html  Myfix__traits_8cpp_source.html  Myfix__types_8cpp.html  Myfix__types_8cpp_source.html  Myfix__types_8hpp.html  Myfix__types_8hpp.js  Myfix__types_8hpp_source.html  Myfix__types__1_8hpp.html  Myfix__types__1_8hpp.js  Myfix__types__1_8hpp_source.html  Perf__classes_8cpp.html  Perf__classes_8cpp.js  Perf__classes_8cpp_source.html  Perf__classes_8hpp.html  Perf__classes_8hpp.js  Perf__classes_8hpp_source.html  Perf__router_8hpp.html  Perf__router_8hpp.js  Perf__router_8hpp_source.html  Perf__traits_8cpp.html  Perf__traits_8cpp_source.html  Perf__types_8cpp.html  Perf__types_8cpp_source.html  Perf__types_8hpp.html  Perf__types_8hpp.js  Perf__types_8hpp_source.html  abstraction__dcas_8h.html  (+7376 more)
include/: configuration.hpp  connection.hpp  consolemenu.hpp  coroutine.hpp  f8allocator.hpp  f8exception.hpp  f8includes.hpp  f8types.hpp  f8utils.hpp  ff_wrapper.hpp  field.hpp  gzstream.hpp  hypersleep.hpp  logger.hpp  memory.hpp  message.hpp  mpmc.hpp  persist.hpp  session.hpp  sessionwrapper.hpp  thread.hpp  tickval.hpp  timer.hpp  traits.hpp  usage.hpp  xml.hpp  xmldecode.hpp  yield.hpp
include/ff/: MPMCqueues.hpp  allocator.hpp  buffer.hpp  config.hpp  cycle.h  dnode.hpp  dynlinkedlist.hpp  dynqueue.hpp  farm.hpp  ff_queue.hpp  gt.hpp  lb.hpp  map.hpp  mapper.hpp  mapping_utils.hpp  node.hpp  oclnode.hpp  partitioners.hpp  pipeline.hpp  spin-lock.hpp  squeue.hpp  staticlinkedlist.hpp  svector.hpp  sysdep.h  ubuffer.hpp  utils.hpp  version.h
include/fix8/: configuration.hpp  connection.hpp  consolemenu.hpp  coroutine.hpp  f8dll.h  f8exception.hpp  f8includes.hpp  f8measure.hpp  f8types.hpp  f8utils.hpp  f8version.h  ff_wrapper.hpp  field.hpp  gzstream.hpp  hypersleep.hpp  logger.hpp  message.hpp  messagebus.hpp  mpmc.hpp  multisession.hpp  persist.hpp  session.hpp  sessionwrapper.hpp  thread.hpp  tickval.hpp  timer.hpp  traits.hpp  usage.hpp  xml.hpp  zeromq_mbus.hpp
interaction-example/: interaction-example.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
m4/: ax_compare_version.m4  ax_path_bdb.m4  sendfile.m4
msvc/: .gitignore  build-all.cmd  build.cmd  compiler.vcxproj  compiler.vcxproj.filters  f8c_stocklibs.cmd  f8c_test.cmd  f8c_test_harness.cmd  f8c_test_hftest.cmd  f8c_utests.cmd  f8config_msvc.h  f8lib_prebuild.cmd  f8lib_prebuild.vcxproj  f8lib_prebuild.vcxproj.filters  f8print.vcxproj  f8print.vcxproj.filters  f8test.vcxproj  f8test.vcxproj.filters  f8testlib.vcxproj  f8testlib.vcxproj.filters  fileLogger.vcxproj  fileLogger.vcxproj.filters  filePersister.vcxproj  filePersister.vcxproj.filters  fix40.vcxproj  fix40.vcxproj.filters  fix41.vcxproj  fix41.vcxproj.filters  fix42.vcxproj  fix42.vcxproj.filters  fix43.vcxproj  fix43.vcxproj.filters  fix44.vcxproj  fix44.vcxproj.filters  fix50.vcxproj  fix50.vcxproj.filters  fix50sp1.vcxproj  fix50sp1.vcxproj.filters  fix50sp2.vcxproj  fix50sp2.vcxproj.filters  (+43 more)
msvc/nuget/: .gitignore  _build-dev.ps1  _build-master.ps1  _publish-dev.ps1  _publish-master.ps1  fix8-tbb.autopkg  fix8.dependencies.getopt.autopkg  fix8.dependencies.gtest.autopkg  fix8.dependencies.openssl.autopkg  fix8.dependencies.poco.autopkg  fix8.dependencies.tbb.autopkg  fix8.dev.autopkg  fix8.dev.stocklib.autopkg  fix8.dev.tests.autopkg  fix8.stable.autopkg  fix8.stable.stocklib.autopkg  fix8.stable.tests.autopkg
plot-examples/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plot-examples.pro
pro/: Makefile.am
runtime/: Makefile  Makefile.am  configuration.cpp  connection.cpp  consolemenu.cpp  dllmain.cpp  f8measure.cpp  f8utils.cpp  field.cpp  filepersist.cpp  gzstream.cpp  innerfix.cpp  logger.cpp  memcachedpersist.cpp  memory.cpp  message.cpp  modp_numtoa.c  persist.cpp  popen.c  precomp.cpp  precomp.hpp  redispersist.cpp  session.cpp  statconst.cpp  traits.cpp  xml.cpp  xmldecode.cpp
schema/: FIX40.xml  FIX41.xml  FIX42.xml  FIX42PERF.xml  FIX42UTEST.xml  FIX43.xml  FIX44.xml  FIX50.xml  FIX50SP1.xml  FIX50SP2.xml  QUICKFIX-LICENCE
stocklib/: Makefile.am  precomp.cpp  precomp.hpp
test/: FIX44.xml  FIX44TEST.xml  Makefile  Makefile.am  coro_hf_client.xml  coro_hf_client_ssl.xml  coro_hf_server_ssl.xml  f8_hf_test  harness.cpp  hf_client.xml  hf_client_include.xml  hf_server.xml  hfprint.cpp  hftest.cpp  hftest.hpp  hftest.record  metaspec.xml  myfix.cpp  myfix.hpp  myfix_client.xml  myfix_custom.hpp  myfix_server.xml  myfix_types.cpp  myfix_types.hpp  myprint.cpp  precomp.hpp  ssl-cli.pem  ssl-svr.pem
utests/: Makefile.am  f8headers.hpp  fileLogger_test.cpp  filePersister_test.cpp  message_test.cpp  mockConnection.cpp  mockConnection.hpp  precomp.hpp  session_test.cpp
util/: Makefile.am  precomp.hpp  seqedit.cpp
(+630 files in other folders)
